--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -43,15 +43,6 @@
             <div class="header__cart__price">item: <span>$150.00</span></div>
         </div>
         <div class="humberger__menu__widget">
-            <div class="header__top__right__language">
-                <img src="img/language.png" alt="">
-                <div>English</div>
-                <span class="arrow_carrot-down"></span>
-                <ul>
-                    <li><a href="#">Spanis</a></li>
-                    <li><a href="#">English</a></li>
-                </ul>
-            </div>
             <div class="header__top__right__auth">
                 <a href="#"><i class="fa fa-user"></i> Login</a>
             </div>
@@ -99,8 +90,14 @@
                                 <!-- <li><i class="fa fa-envelope"></i> hello@gmail.com</li> -->
                                 
                                 <div class="col-lg-10">
+                                    <!-- <div class="col-lg-3">
+                                        <div class="header__logo">
+                                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                                        </div>
+                                    </div> -->
                                     <nav class="header__menu">
                                         <ul>
+                                            <div class="header__logo"><a href="./index.html"><img src="img/logo.png" alt=""></a></div>
                                             <li class="active"><a href="./index.html">Home</a></li>
                                             <li><a href="./shop-grid.html">Shop</a></li>
                                             <li><a href="./contact.html">Contact</a></li>
@@ -131,7 +128,7 @@
 
                             
                             <div class="header__top__right__auth">
-                                <a href="#"><i class="fa fa-user"></i> Login</a>
+                                <a href="login.html"><i class="fa fa-user"></i> Login</a>
                             </div>
                         </div>
                     </div>
@@ -140,11 +137,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
-                    <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
-                    </div>
-                </div>
+                
                 
                 <div class="col-lg-3">
                     <div class="header__cart">
