--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <title>Đăng nhập</title>
-  <link rel="stylesheet" href="css/stylelogin.css" type="text/css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div class="form-structor">
-	<div class="signup">
-		<h2 class="form-title" id="signup"><span>or</span>Sign up</h2>
-		<div class="form-holder">
-			<input type="text" class="input" placeholder="Name" />
-			<input type="email" class="input" placeholder="Email" />
-			<input type="password" class="input" placeholder="Password" />
-		</div>
-		<button class="submit-btn">Sign up</button>
-	</div>
-	<div class="login slide-up">
-		<div class="center">
-			<h2 class="form-title" id="login"><span>or</span>Log in</h2>
-			<div class="form-holder">
-				<input type="email" class="input" placeholder="Email" />
-				<input type="password" class="input" placeholder="Password" />
-			</div>
-			<button class="submit-btn">Log in</button>
-		</div>
-	</div>
-</div>
-<!-- partial -->
-<script src="js/script.js"></script>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Đăng nhập</title>
+    <link rel="stylesheet" href="css/stylelogin.css" type="text/css" />
+  </head>
+  <body>
+    <!-- partial:index.partial.html -->
+    <div class="form-structor">
+      <div class="signup">
+        <h2 class="form-title" id="signup"><span>hoặc</span>Đăng ký</h2>
+        <div class="form-holder">
+          <input type="text" class="input" placeholder="Họ và tên" />
+          <input type="number" class="input" placeholder="Số điện thoại" />
+          <input type="email" class="input" placeholder="Email" />
+          <input type="password" class="input" placeholder="Mật khẩu" />
+          <input
+            type="password"
+            class="input"
+            placeholder="Nhập lại mật khẩu"
+          />
+        </div>
+        <button class="submit-btn">Đăng ký</button>
+      </div>
+      <div class="login slide-up">
+        <div class="center">
+          <h2 class="form-title" id="login"><span>hoặc</span>Đăng nhập</h2>
+          <div class="form-holder">
+            <input type="email" class="input" placeholder="Email" />
+            <input type="password" class="input" placeholder="Password" />
+          </div>
+          <button class="submit-btn">Đăng nhập</button>
+        </div>
+      </div>
+    </div>
+    <!-- partial -->
+    <script src="js/script.js"></script>
+  </body>
 </html>
