--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -31,6 +31,7 @@
             <input type="password" class="input" placeholder="Password" />
           </div>
           <button class="submit-btn">Đăng nhập</button>
+          <div class="forgot-passwd"><a href="#">Quên mật khẩu</a></div>
         </div>
       </div>
     </div>
