--- a/DiChoHo/templates/about.html
+++ b/DiChoHo/templates/about.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="goto-here">
-		<div class="py-1 bg-primary">
+		<!-- <div class="py-1 bg-primary">
     	<div class="container">
     		<div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
 	    		<div class="col-lg-12 d-block">
@@ -49,7 +49,7 @@
 			    </div>
 		    </div>
 		  </div>
-    </div>
+    </div> -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html"><img id="brand-logo" src="images/logo.png" class="img-logo" alt="...">DICHOHO</a>
@@ -103,12 +103,11 @@
 					<div class="col-md-7 py-5 wrap-about pb-md-5 ftco-animate">
 	          <div class="heading-section-bold mb-4 mt-md-5">
 	          	<div class="ml-md-0">
-		            <h2 class="mb-4">Welcome to Vegefoods an eCommerce website</h2>
+		            <h2 class="mb-4">Chào mừng bạn đến với cửa hàng thực phẩm của chúng tôi</h2>
 	            </div>
 	          </div>
 	          <div class="pb-md-5">
-	          	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+	          	<p>Chúng tôi hỗ trợ bạn các dịch vụ về mua hàng trực tuyến với chất lượng và giá trị tốt nhất trên Website của chúng tôi</p>
 							<p><a href="#" class="btn btn-primary">Shop now</a></p>
 						</div>
 					</div>
@@ -116,26 +115,26 @@
 			</div>
 		</section>
 
-		<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
+		<!-- <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
       <div class="container py-4">
         <div class="row d-flex justify-content-center py-5">
           <div class="col-md-6">
-          	<h2 style="font-size: 22px;" class="mb-0">Subcribe to our Newsletter</h2>
-          	<span>Get e-mail updates about our latest shops and special offers</span>
+          	<h2 style="font-size: 22px;" class="mb-0">Đăng ký để nhận các thông tin mới về mặt hàng </h2>
+          	<span>Nhận thông tin cập nhật qua email về các cửa hàng mới nhất của chúng tôi và các ưu đãi đặc biệt</span>
           </div>
           <div class="col-md-6 d-flex align-items-center">
             <form action="#" class="subscribe-form">
               <div class="form-group d-flex">
-                <input type="text" class="form-control" placeholder="Enter email address">
-                <input type="submit" value="Subscribe" class="submit px-3">
+                <input type="text" class="form-control" placeholder="Nhập địa chỉ email của bạn">
+                <input type="submit" value="Đăng ký" class="submit px-3">
               </div>
             </form>
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 		
-		<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_3.jpg);">
+		<!-- <section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_3.jpg);">
     	<div class="container">
     		<div class="row justify-content-center py-5">
     			<div class="col-md-10">
@@ -176,14 +175,14 @@
 	        </div>
         </div>
     	</div>
-    </section>
+    </section> -->
 		
 		<section class="ftco-section testimony-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Testimony</span>
-            <h2 class="mb-4">Our satisfied customer says</h2>
+            <h2 class="mb-4">Những vị khách của chúng tôi đã nhận xét</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
           </div>
         </div>
@@ -379,13 +378,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <p>
-				Copyright &copy;<script>document.write(new Date().getFullYear());</script> 
-			</p>
-          </div>
-        </div>
+        
       </div>
     </footer>
   
