create shop app

--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -101,8 +101,8 @@
 	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
 	            <div class="col-md-12 ftco-animate text-center">
-	              <h1 class="mb-2">Chúng tôi mang lại giải pháp mua hàng hóa mùa dịch</h1>
-	              <h2 class="subheading mb-4">We bring solutions to buy goods during the COVID-19 pandemic</h2>
+	              <h1 class="mb-2">Giải pháp mua hàng hóa mùa dịch</h1>
+	              <h2 class="subheading mb-4">Supply neccessary products in the COVID-19 pandemic</h2>
 	              <p><a href="#" class="btn btn-primary">Xem chi tiết</a></p>
 	            </div>
 
