--- a/DiChoHo/templates/login.html
+++ b/DiChoHo/templates/login.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/stylelogin.css" type="text/css" />
   </head>
   <body>
+    
     <!-- partial:index.partial.html -->
+    
     <div class="form-structor">
       <div class="signup">
         <h2 class="form-title" id="signup"><span>hoặc</span>Đăng ký</h2>
@@ -21,7 +23,8 @@
             placeholder="Nhập lại mật khẩu"
           />
         </div>
-        <button class="submit-btn">Đăng ký</button>
+        
+        <button class="submit-btn register_btn">Đăng ký</button>
       </div>
       <div class="login slide-up">
         <div class="center">
@@ -30,7 +33,7 @@
             <input type="email" class="input" placeholder="Email" />
             <input type="password" class="input" placeholder="Password" />
           </div>
-          <button class="submit-btn">Đăng nhập</button>
+          <button class="submit-btn login-btn">Đăng nhập</button>
           <div class="forgot-passwd"><a href="#">Quên mật khẩu</a></div>
         </div>
       </div>
